...
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <Spinner
        android:id="@+id/spinner_course_year"
        android:layout_width="196dp"
        android:layout_height="43dp"
        android:background="@drawable/custom_spinner"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.1" />

    <Spinner
        android:id="@+id/spinner_course_quarter"
        android:layout_width="196dp"
        android:layout_height="43dp"
        android:background="@drawable/custom_spinner"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_course_year"
        app:layout_constraintVertical_bias="0.03" />

    <Spinner
        android:id="@+id/spinner_course_subject"
        android:layout_width="196dp"
        android:layout_height="43dp"
        android:background="@drawable/custom_spinner"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_course_quarter"
        app:layout_constraintVertical_bias="0.035" />

    <EditText
        android:id="@+id/editText_course_number"
        android:layout_width="189dp"
        android:layout_height="45dp"
        android:layout_marginStart="108dp"
        android:layout_marginBottom="110dp"
        android:ems="10"
        android:hint="Course Number"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Spinner
        android:id="@+id/spinner_course_size"
        android:layout_width="196dp"
        android:layout_height="43dp"
        android:layout_marginBottom="280dp"
        android:background="@drawable/custom_spinner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
        android:text="@string/btn_finish"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_add_another_classes"
        app:layout_constraintVertical_bias="0.208" />

    <TextView
        android:id="@+id/tv_add_another_classes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
